--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.2.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/drawer": "^6.7.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "@types/prop-types": "^15.7.12",
     "@types/react-native-snap-carousel": "^3.8.11",
+    "@web3auth/react-native-sdk": "^7.0.0",
+    "expo-font": "^12.0.8",
     "nullthrows": "^1.1.1",
     "react": "^18.2.0",
     "react-native": "^0.74.3",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-svg": "^15.4.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
@@ -41,6 +49,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.5.3"
   },
